--- a/src/main/resources/ChunkPurge_at.cfg
+++ b/src/main/resources/ChunkPurge_at.cfg
@@ -1,1 +1,1 @@
-public jr.g # net/minecraft/world/gen/ChunkProviderServer/loadedChunks
+public-f net.minecraft.world.gen.ChunkProviderServer field_73245_g # loadedChunks
